kubernetes/token/04_deployment_with_token_config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zabbix-kubernetes
  namespace: monitoring
spec:
  selector:
    matchLabels:
      app: zabbix-kubernetes
  replicas: 1
  template:
    metadata:
      labels:
        app: zabbix-kubernetes
    spec:
      containers:
        - name: k8s-zabbix
          # add your
          #image: your-repo.foo.bar:k8s-zabbix:latest
          image: scoopex666/k8s-zabbix:latest
          args: [ "config_default" ]
          # review config_default.py for additionaol configuration values (convert the names to uppercase)
          imagePullPolicy: Always
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
              cpu: "250m"
      serviceAccount: monitoring
      serviceAccountName: monitoring
